syntax = "proto3";

package apis;
option go_package = "../apis/greeter";

service Greeter {
  rpc SayHello (SayHelloRequest) returns (SayHelloReply) {}
}

message SayHelloRequest {
  string name = 1;
}

message SayHelloReply {
  string message = 1;
}
